♻️ refactor : 전달된 값이 Enum인지 확인하는 커스텀 어노테이션 추가
전달된 값이 Enum인지 확인하는 @ValueOfEnum 어노테이션 구현
언더바(_)를 받지 않고 대소문자를 구분하지 않도록 하여 검증이 필요한 Enum에nameOf() 메서드 추가