@@ -1,22 +1,32 @@
 package com.devcourse.checkmoi.domain.study.model;
 
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.Set;
 
 public enum StudyStatus {
-    RECRUITING(
-        Set.of(NextStatus.IN_PROGRESS, NextStatus.RECRUITING_FINISHED)),
-    RECRUITING_FINISHED(
+    RECRUITING("RECRUITING",
+        Set.of(NextStatus.IN_PROGRESS, NextStatus.RECRUITING)),
+    RECRUITING_FINISHED("RECRUITINGFINISHED",
         Set.of(NextStatus.IN_PROGRESS)),
-    IN_PROGRESS(
-        Set.of(NextStatus.FINISHED)),
-    FINISHED(
-        Collections.emptySet());
+    IN_PROGRESS("INPROGRESS",
+        Set.of(NextStatus.RECRUITING, NextStatus.IN_PROGRESS, NextStatus.FINISHED)),
+    FINISHED("FINISHED",
+        Set.of(NextStatus.FINISHED));
+
+    private final String name;
 
     private final Set<NextStatus> allowedNextStatus;
 
-    StudyStatus(Set<NextStatus> allowedNextStatus) {
+    StudyStatus(String name, Set<NextStatus> allowedNextStatus) {
+        this.name = name;
         this.allowedNextStatus = allowedNextStatus;
+    }
+
+    public static StudyStatus nameOf(String name) {
+        return Arrays.stream(values())
+            .filter(value -> value.name.equals(name.toUpperCase()))
+            .findFirst()
+            .orElse(null);
     }
 
     public boolean isAllowedToChangeStatus(StudyStatus status) {
@@ -43,5 +53,10 @@ public enum StudyStatus {
             return NextStatus.valueOf(status.name());
         }
 
+    }
+
+    @Override
+    public String toString() {
+        return name;
     }
 }
